--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "jest": "^23.6.0",
     "jsdoc": "^3.5.5",
+    "mongoose": "^5.4.5",
     "require-directory": "^2.1.1",
     "swagger-ui-express": "^4.0.2"
   }
