--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "express": "^4.16.3",
     "jest": "^23.6.0",
     "jsdoc": "^3.5.5",
+    "jsonwebtoken": "^8.4.0",
+    "mongodb-memory-server": "^3.0.0",
     "mongoose": "^5.4.5",
+    "mongoose-schema-jsonschema": "^1.2.1",
+    "morgan": "^1.9.1",
     "require-directory": "^2.1.1",
+    "supertest": "^3.4.1",
     "swagger-ui-express": "^4.0.2"
   }
 }
